--- a/gb/14/11/22/n4301882.md
+++ b/gb/14/11/22/n4301882.md
@@ -1,16 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lyzzoh3779/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lyzzoh3779/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lyzzoh3779/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lyzzoh3779/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lyzzoh3779/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>彭定康为参与雨伞运动的学生感到骄傲</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2014/11/1411060335061758-600x400.jpg" />
-<h6>香港最后一任港督彭定康11月4日表示，香港2017年的行政长官选举应加入公民提名，以符合民主进程。图为3月22日，彭定康接受港台英文电视节目访问。（aaron tam/AFP）
-</h6>
+
+<h6></h6>
 <hr>
-	<p>【大纪元2014年11月22日讯】（大纪元记者刘毅综合报导）11月20日下午，美国国会中国事务行政委员会（CECC）举行“香港民主前途”<ahref="https://github.com/lyzzoh3779/djy/blob/master/gb/tag/%E5%90%AC%E8%AF%81%E4%BC%9A.md#1">听证会</a>。最后一任港英总督<ahref="https://github.com/lyzzoh3779/djy/blob/master/gb/tag/%E5%BD%AD%E5%AE%9A%E5%BA%B7.md#1">彭定康</a>（Chris Patten）受邀通过视像连线作证。彭定康在作证中力撑香港争取真普选的<ahref="https://github.com/lyzzoh3779/djy/blob/master/gb/tag/%E9%9B%A8%E4%BC%9E%E8%BF%90%E5%8A%A8.md#1">雨伞运动</a>，建议学生们遵从法庭禁制令，运动势必以另一种形式延续下去，香港的未来必定属于黄之锋等年轻人。他说：“这些孩子令我眼前一亮，他们勇敢地、端正地起来争取，如果他们是我的孩子，我会感到非常骄傲。”</p>
-<p><ahref="https://github.com/lyzzoh3779/djy/blob/master/gb/tag/%E5%BD%AD%E5%AE%9A%E5%BA%B7.md#1">彭定康</a>表示，美英两国应该就香港问题发声，这样有利于香港，英国作为《中英联合声明》的签署国之一，对香港落实声明内容负有责任和义务，《中英联合声明》是中英两国的协议，是国际条约。</p>
+	<p>【大纪元2014年11月22日讯】（大纪元记者刘毅综合报导）11月20日下午，美国国会中国事务行政委员会（CECC）举行“香港民主前途”<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%90%AC%E8%AF%81%E4%BC%9A.md#1">听证会</a>。最后一任港英总督<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BD%AD%E5%AE%9A%E5%BA%B7.md#1">彭定康</a>（Chris Patten）受邀通过视像连线作证。彭定康在作证中力撑香港争取真普选的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%9B%A8%E4%BC%9E%E8%BF%90%E5%8A%A8.md#1">雨伞运动</a>，建议学生们遵从法庭禁制令，运动势必以另一种形式延续下去，香港的未来必定属于黄之锋等年轻人。他说：“这些孩子令我眼前一亮，他们勇敢地、端正地起来争取，如果他们是我的孩子，我会感到非常骄傲。”</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BD%AD%E5%AE%9A%E5%BA%B7.md#1">彭定康</a>表示，美英两国应该就香港问题发声，这样有利于香港，英国作为《中英联合声明》的签署国之一，对香港落实声明内容负有责任和义务，《中英联合声明》是中英两国的协议，是国际条约。</p>
 <p>他非常赞赏美国总统奥巴马对香港问题的表态，奥巴马日前出席澳洲布里斯班举行的G20国高峰会议时，曾提到香港人正在“为自己的普世权利发声，民众必须有选择领袖的自由”，奥巴马之前在北京和习近平会面时曾经赞扬香港的学生。</p>
 <p>彭定康认为英国政府不愿就香港问题表达太多立场，有些人认为外国政府坚守原则及表达立场会损害与中国的经济合作，彭定康认为英美与中共交往时应固定原则及国家利益，“当有人继续提倡只要我们漠视中共的坏行为，我们就可得到理想的经济关系”，“这在某程度上鼓励了中共的糟糕行为，（让他们）继续暗示我们只有对他们的糟糕行为视而不见，才能继续保持令人满意的经济关系”。</p>
-<p>就中共及香港特首梁振英声称，香港<ahref="https://github.com/lyzzoh3779/djy/blob/master/gb/tag/%E9%9B%A8%E4%BC%9E%E8%BF%90%E5%8A%A8.md#1">雨伞运动</a>得到外国势力的操控，彭定康认为这是对这次美好运动的侮辱，是对参与运动年轻人的侮辱。</p>
+<p>就中共及香港特首梁振英声称，香港<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E9%9B%A8%E4%BC%9E%E8%BF%90%E5%8A%A8.md#1">雨伞运动</a>得到外国势力的操控，彭定康认为这是对这次美好运动的侮辱，是对参与运动年轻人的侮辱。</p>
 <p>彭定康赞扬参加雨伞运动的年轻人，赞扬他们拒绝接受自己的未来被偷走，年轻人认为维护香港法治与自由的最佳途径就是真普选。而学民思潮黄之锋及其他学生是为公义抗争的典范，他们拥有未来，而不是那些主张选举要筛选的人，或主张穷人不应该有选举权的香港特首梁振英拥有未来。</p>
 <p>面对目前局面，彭定康建议学生，运动要一直保持理性，近日因暴力份子的行为而蒙污是非常可惜，学生取得舆论支持及赢取道德高地是因为运动谨守法治精神，所以就算运动目的多么崇高，如果法院对某些占领区颁下禁制令，学生应撤离占领区，撤离不代表学生们输了，运动一定会以另一形式延续下去，目前运动可稍为降温，为未来运动转型做好准备：“这些孩子令我眼前一亮，他们勇敢地、端正地起来争取，如果他们是我的孩子，我会感到非常骄傲。”</p>
 <p>公民党议员陈家洛相信，彭定康之所以呼吁学生考虑其他方式抗争是担心港府以暴力镇压学生来清场。</p>
@@ -27,41 +26,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/14/10/28/n4282615.md#1">前港督彭定康：政府主动让步更明智</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/14/10/28/n4282686.md#1">彭定康：梁振英应顺民意 否则失执政资格</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/14/11/1/n4285914.md#1">前港督彭定康：勿让香港年轻人感到心死</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/14/11/5/n4288919.md#1">末代港督吁设公民提名 英国为何迟给香港民主？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/28/n4282615.md#1">前港督彭定康：政府主动让步更明智</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/10/28/n4282686.md#1">彭定康：梁振英应顺民意 否则失执政资格</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/11/1/n4285914.md#1">前港督彭定康：勿让香港年轻人感到心死</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/11/5/n4288919.md#1">末代港督吁设公民提名 英国为何迟给香港民主？</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/lyzzoh3779/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/21/n11602447.md#1" target="_blank">他们为我们的生活带来光明（4）</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/20/n11334759.md#1" target="_blank">宋征时：迟浩田披露中共出卖大面积北方领土</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">美国务院年度报告 批中共严重打压宗教自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/20/n12963544.md#1">血月是什么征兆 圣经预言怎么说？</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/22/n12967538.md#1">中华文化有“血月”之说吗  有教人避难之法吗？</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/20/n12964086.md#1">【未解之谜】水往高处流 探秘“神秘点”</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12977791.md#1">【探索时分】导弹飞过台海 谁挽救了台湾？</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12977362.md#1">【军事热点】印军新战略 对中共实施可信威慑</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/27/n12978341.md#1">【唐浩视界】中共疫苗藏统战 疫情嫁祸台湾？</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12975098.md#1">死亡赛事惊动习近平 逝者家属曝官方拿钱堵嘴</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973919.md#1">你中奖了吗？110年3-4月统一发票兑奖资讯</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972758.md#1">被问为何继续当演员 舒淇6字回应笑翻全场</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/27/n12978414.md#1">38岁胡歌近照曝光 消瘦老态惊呆网友</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12973141.md#1">同行被说沦为洗车工 黄秋生：该价值观很势利</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972884.md#1">甄珍在香港眩晕摔倒 第二次开颅做手术</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972661.md#1">茶喝错当心副作用 中医：1种茶护肝又养脾胃</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/24/n12972633.md#1">沉默缺氧造成新冠患者猝死增？2类人要警惕</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/26/n12977519.md#1">台湾疫情告急 到底该不该普筛？专家解答</a></li>
-<li><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/21/5/25/n12973558.md#1">美国加州巨花魔芋开花 吸引上千人排队参观</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lyzzoh3779/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lyzzoh3779/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/11/22/n4301882.htm">彭定康为参与雨伞运动的学生感到骄傲</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/11/22/n4301882.htm">彭定康为参与雨伞运动的学生感到骄傲</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lyzzoh3779/djy/blob/master/gb/14/11/22/n4301882.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lyzzoh3779/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lyzzoh3779/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lyzzoh3779/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lyzzoh3779/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/14/11/22/n4301882.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
